# assessment

./: .gitignore
backend/: README.md  main.py  pyproject.toml  test.py
frontend/: .env.example  README.md
frontend/src/routes/: +page.svelte
