[tool.poetry]
name = "backend"
version = "0.0.0"
description = ""
authors = ["Jaylen Ho Luc <jaylenluc1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
openai = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
